<resources>
    <string name="app_name">UI1</string>
    <string name="practica_1_android">Practica 1 Android</string>
    <string name="nombre">Nombre</string>
    <string name="genero">Genero</string>
    <string name="masculino">Masculino</string>
    <string name="radiobutton">RadioButton</string>
    <string name="femenino">Femenino</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="practica_1_android">Practica 1 Android</string>
</resources>